# Training-VNS

Day1/: b1.py  b2.py  b3.py  b4.py  b5.py
Day1/.cph/: .b1.py_737dbc3a65e87d7b90749176e4635d66.prob  .b2.py_3a9d24b1090dd57f7c0d6a258bc0cd3c.prob  .b3.py_8b8d7e6bd0f1e659816fe49546b91a94.prob  .b5.py_6dd43d756b349fdef5d45fa53ae2927c.prob
Day14/: So sánh FastAPI và Django.docx
Day2/: hr_management.py
Day3/: cars_database.db  crawl.py  db_core.py  oto_data.csv  oto_data.json  pyproject.toml
Day4/: Dockerfile  README.md  pyproject.toml
Day4-Day7/: .env  .gitignore  README.md  docker-compose.microservices.yml  docker-compose.yml  main.py
Day4-Day7/app/core/: __init__.py
Day4-Day7/app/models/: comment.py  post.py  user.py
Day4-Day7/app/schemas/: comment.py  post.py
Day4-Day7/docs/: 01-kien-truc-he-thong.md  02-cau-truc-thu-muc.md  03-cai-dat.md  04-smoke-test.md
Day4-Day7/docs/features/: auth-api.md  comments-api.md  posts-api.md
Day4-Day7/frontend/: admin.html  index.html
Day4-Day7/microservices/auth_service/: Dockerfile  requirements.txt
Day4-Day7/microservices/content_service/: Dockerfile  requirements.txt
Day4/app/: main.py
Day4/app/api/routers/: auth.py
Day4/app/core/: database.py  security.py
Day4/app/schemas/: __init__.py  user.py
Day4/app/services/: __init__.py  auth_service.py  comment_service.py  post_service.py
Day4/frontend/: index.html
Day8-Day12/ecommerce-microservices/: .env.example  .gitignore  README.md  docker-compose.yml
Day8-Day14/ecommerce-microservices/: .env.example  README.md
(+133 files in other folders)
